# academic-workflow-suite

./: .containerignore  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitlab-ci.yml  .guix-channel  .yamllint  CHANGELOG.md  CI-README.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DOCKER_QUICKREF.md  DOCKER_SETUP_SUMMARY.md  ECOSYSTEM.scm  GOVERNANCE.md  MAINTAINERS.md  META.scm  Makefile  README.adoc  README.md  ROADMAP.md  RSR_COMPLIANCE.adoc  RSR_COMPLIANCE.md  STATE.scm  TPCF.md  codemeta.json  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  flake.nix  guix.scm
.claude/: CLAUDE.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md  security_vulnerability.md
.github/workflows/: ci.yml  codeql.yml  mirror.yml  quality.yml  scorecard.yml
.gitlab/issue_templates/: Bug.md  Feature.md  Security.md
.gitlab/merge_request_templates/: Default.md
.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
.well-known/: ai.txt  dc.xml  humans.txt  security.txt
Containerfiles/: Dockerfile.backend  Dockerfile.core  Dockerfile.nginx
cli/: .gitignore  CLI_IMPLEMENTATION_SUMMARY.md  Cargo.toml  Makefile  QUICKREF.md  README.md  build.sh
cli/completions/: generate_completions.sh
cli/examples/: README.md  batch-marking.sh  interactive-marking.sh  setup-project.sh
cli/src/: api_client.rs  config.rs  interactive.rs  main.rs  models.rs  output.rs
cli/src/commands/: batch.rs  config_cmd.rs  doctor.rs  feedback.rs  init.rs  login.rs  mark.rs  mod.rs  start.rs  status.rs  stop.rs  sync.rs  update.rs
components/ai-jail/: .gitignore  Cargo.toml  Containerfile  DEVELOPMENT.md  README.md  SUMMARY.md  build.sh  run.sh  test.sh
components/ai-jail/examples/: integration_example.sh  sample_request.json  sample_response.json
components/ai-jail/src/: inference.rs  main.rs  model.rs  protocol.rs
components/ai-jail/tests/: test_isolation.rs
components/backend/: .gitignore  ARCHITECTURE.md  README.md  mix.exs
components/core/: Cargo.toml  README.md
components/core/src/: events.rs  feedback.rs  ipc.rs  lib.rs  security.rs  tma.rs
components/office-addin/: .babelrc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  bsconfig.json  manifest.xml  package.json  webpack.config.js
components/shared/: .gitignore  Cargo.toml  README.md
components/shared/benches/: crypto_bench.rs  validation_bench.rs
components/shared/src/: crypto.rs  errors.rs  lib.rs  logging.rs  sanitization.rs  testing.rs  time.rs  validation.rs
components/shared/tests/: integration_test.rs  property_tests.proptest-regressions  property_tests.rs
config/: README.md  defaults.cue  schema.cue  validate.sh  validation.cue
config/cue.mod/: module.cue
config/environments/: development.cue  production.cue  staging.cue  test.cue
docker/: README.md
docker/scripts/: docker-down.sh  docker-logs.sh  docker-reset.sh  docker-up.sh
dockerfiles/: Dockerfile.ai-jail
docs/: API_REFERENCE.md  ARCHITECTURE.md  CI-CD.md  CITATIONS.adoc  DEVELOPMENT.md  DOCKER_GUIDE.md  INSTALLATION_GUIDE.md  IP_PROTECTION.md  QUICK_START.md  README.md  SECURITY.md  USER_GUIDE.md
examples/: README.md
examples/api/rust/: Cargo.toml
examples/api/rust/src/: main.rs
examples/docker/: docker-compose.full.yml  docker-compose.simple.yml
examples/quickstart/: batch_marking.sh  custom_rubric.yaml  mark_single_tma.js  mark_single_tma.py  mark_single_tma.sh
monitoring/: README.md
monitoring/alertmanager/: alertmanager.yml
monitoring/docs/: ALERTS_REFERENCE.md  DASHBOARD_GUIDE.md  MONITORING_GUIDE.md
monitoring/exporters/: Cargo.toml  aws_exporter.rs
monitoring/healthchecks/: endpoints.yaml  healthcheck.sh
monitoring/logs/: log_patterns.yaml  loki-config.yaml  promtail-config.yaml
monitoring/prometheus/: recording_rules.yml
monitoring/scripts/: backup_dashboards.sh  setup_monitoring.sh  test_alerts.sh
monitoring/uptime/: uptime-kuma-config.json  uptimerobot-monitors.json
release/: .gitlab-ci-release.yml  README.md
release/appimage/: AppImageBuilder.yml
release/chocolatey/: aws.nuspec
release/docs/: PACKAGING_GUIDE.md  RELEASE_PROCESS.md  VERSION_POLICY.md
release/flatpak/: com.academicworkflow.AWS.yaml
release/homebrew/: aws.rb
release/scripts/: package.sh  release.sh  version.sh
release/snap/: snapcraft.yaml
release/templates/: ANNOUNCEMENT.md.tmpl  RELEASE_NOTES.md.tmpl
release/verify/: test_install.sh  verify_release.sh
scripts/ci/: README.md  build-all.sh  package.sh  test-integration.sh
scripts/install/: README.md  config-template.yaml  dependencies.txt  install-linux.sh  install-windows.ps1  install.sh
scripts/management/: README.md  backup.sh  dev-setup.sh  health-check.sh  init-database.sh  test-all.sh  uninstall.sh  update.sh
security/: README.md  SUMMARY.txt  run_all_security_tests.sh
security/audit-scripts/: dependency-audit.sh  license-check.sh  secret-scan.sh
security/dynamic-analysis/: fuzz_core.sh  memory_safety.sh  race_condition_tests.sh  sanitizer_tests.sh
security/policies/: INCIDENT_RESPONSE.md  SECURITY_POLICY.md  THREAT_MODEL.md
security/reporting/: generate_security_report.py
security/static-analysis/: custom_rules.yaml  run_clippy.sh  run_codeql.sh  run_semgrep.sh
tasks/: Justfile
tests/: README.md
tests/benchmarks/: Cargo.toml  README.md  generate_report.py  integration_bench.sh  profile_cpu.sh  profile_gpu.sh  profile_memory.sh  run_all_benchmarks.sh
tests/benchmarks/baselines/: baseline_cpu_only.json  baseline_rtx3080.json
tests/benchmarks/benches/: ai_benchmarks.rs  core_benchmarks.rs  ipc_benchmarks.rs  lmdb_bench.rs
tests/benchmarks/load_tests/: k6_script.js  locust_config.py
tests/unit/: test_data.rs
website/: Makefile  README.md  build.sh  index.html
website/blog/: index.html
website/pages/: about.html  documentation.html  download.html  (+3 more)
(+173 files in other folders)
