[package]
name = "academic-shared"
version = "0.1.0"
edition = "2021"
authors = ["Academic Workflow Suite Team"]
description = "Shared utilities library for the Academic Workflow Suite"
license = "GPL-3.0"
repository = "https://github.com/academic-workflow-suite"
keywords = ["academic", "utilities", "cryptography", "validation"]
categories = ["development-tools", "cryptography"]

[lib]
name = "academic_shared"
path = "src/lib.rs"

[dependencies]
# Cryptography
sha3 = "0.10"
hmac = "0.12"
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
uuid = { version = "1.6", features = ["v4", "fast-rng"] }
nanoid = "0.4"
subtle = "2.5"

# Validation
regex = "1.10"
email_address = "0.2"
url = "2.5"

# Sanitization
ammonia = "3.3"
unicode-normalization = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
lazy_static = "1.4"
hex = "0.4"
rand = "0.8"

[dev-dependencies]
# Property-based testing
proptest = "1.4"
quickcheck = "1.0"
quickcheck_macros = "1.0"

# Testing utilities
tempfile = "3.8"
criterion = "0.5"
pretty_assertions = "1.4"

# Fuzzing support
arbitrary = { version = "1.3", features = ["derive"] }

[features]
default = ["std"]
std = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[[bench]]
name = "crypto_bench"
harness = false

[[bench]]
name = "validation_bench"
harness = false
