[package]
name = "aws-exporter"
version = "0.1.0"
edition = "2021"
authors = ["Academic Workflow Suite Team"]
description = "Custom Prometheus exporter for Academic Workflow Suite metrics"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async
async-trait = "0.1"
futures = "0.3"

# Time
chrono = "0.4"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
