[package]
name = "awap-rust-client"
version = "0.1.0"
edition = "2021"
authors = ["Academic Workflow Suite Contributors"]
description = "Rust client for Academic Workflow API"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"

[dev-dependencies]
tokio-test = "0.4"
